--- a/public/css/style.css
+++ b/public/css/style.css
@@ -180,24 +180,70 @@ h1 {
     height: 40px;
     width: 40px;
 }
-/* #add-notification-model {
+#add-notification-model {
     display: none;
-} */
-#add-notification-model > form{
+}
+#add-notification-model > form {
     display: flex;
     align-items: center;
 }
 #add-notification-model > form > label.pure-material-textfield-outlined {
-    width: 520px;
+    width: 530px;
     margin: 15px 10px 5px 48px;
-}
-#add-notification-model > form > label.pure-material-select-outlined {
-    width: 280px;
-    margin: 15px 25px 5px 15px;
 }
 #add-notification-model > form > button {
     margin: 10px 10px 0 0;
 }
+
+/* Multi-Select Dropdown */
+
+#category {
+    display: inline-block;
+    margin: 0 18px 0 10px;
+}
+#category span {
+    position: relative;
+    cursor: pointer;
+    padding: 15px 140px 15px 10px;
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    font-weight: 500;
+    font-size: 16px;
+    color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.6);
+}
+#category span:hover {
+    border: 1px solid #3b90d6;
+    transition: border 0.2s, box-shadow 0.2s;
+}
+#category span:after {
+    position: absolute;
+    content: "";
+    border-left: 2px solid rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.6);
+    border-top: 2px solid rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.6);
+    padding: 4px;
+    right: 15px;
+    top: 35%;
+    transform: rotate(-135deg);
+}
+#category ul.items {
+    display: none;
+    position: absolute;
+    padding: 7px;
+    margin: 0;
+    width: 285px;
+    border: 1px solid #ccc;
+    background-color: white;
+    font-weight: 500;
+    font-size: 16px;
+    color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.6);
+}
+#category ul.items li {
+    list-style: none;
+}
+#category ul.items li input {
+    margin-right: 12px;
+}
+
 /* Student & Teacher Page -------------------------------------------------------- */
 
 span.label-heading {
