--- a/views/office/partials/notification.ejs
+++ b/views/office/partials/notification.ejs
@@ -12,13 +12,17 @@
                 <input placeholder=" " name="message" required>
                 <span>Add your message here</span>
             </label>
-            <label class="pure-material-select-outlined outline-2">
-               <select type="select" name="role" required>
-                  <option value="" disabled selected>Select your role</option>
-               </select>
-               <span></span>
-            </label>
-            <button class="btn btn-outline btn-danger btn-action" type="button" 
+            <div id="category">
+              <span>Send messages to</span>
+              <ul id="items" class="items">
+                  <li><label><input type="checkbox" />Apple </label></li>
+                  <li><label><input type="checkbox" />Apple </label</li>
+                  <li><label><input type="checkbox" />Apple </label</li>
+                  <li><label><input type="checkbox" />Apple </label</li>
+                  <li><label><input type="checkbox" />Apple </label</li>
+              </ul>
+          </div>
+              <button class="btn btn-outline btn-danger btn-action" type="button" 
                     onClick="window.location.reload(true)">Cancel</button>
             <button class="btn btn-outline btn-primary btn-action" type="submit" >Send</button>
         </form>
