--- a/views/office/partials/details.ejs
+++ b/views/office/partials/details.ejs
@@ -1,13 +1,13 @@
 <ul class="card-container" style="margin-top: 50px;">
     <li class="card-content">
-        <a href="#" style="text-decoration: none;">
+        <a href='/office/faculty-details' style="text-decoration: none;">
           <span class="card-title card-title-small">
             Faculty Details
           </span>
         </a>
      </li>
      <li class="card-content">
-        <a href="#" style="text-decoration: none;">
+        <a href="/office/student-details" style="text-decoration: none;">
           <span class="card-title card-title-small">
             Student Details
           </span>
