--- a/views/office/partials/notification.ejs
+++ b/views/office/partials/notification.ejs
@@ -7,9 +7,9 @@
       </svg>
       </a>
       <div id="add-notification-model">
-        <form>
+        <form action="/office/notification" method="POST">
             <label class="pure-material-textfield-outlined">
-                <input placeholder=" " name="message" required>
+                <input placeholder=" " name="message" value="<%= notification.message %>" required>
                 <span>Add your message here</span>
             </label>
             <div id="category">
@@ -22,7 +22,7 @@
                   <li><label><input type="checkbox" />Apple </label</li>
               </ul>
           </div>
-              <button class="btn btn-outline btn-danger btn-action" type="button" 
+            <button class="btn btn-outline btn-danger btn-action" type="button" 
                     onClick="window.location.reload(true)">Cancel</button>
             <button class="btn btn-outline btn-primary btn-action" type="submit" >Send</button>
         </form>
