--- a/views/teacher/assignments/index-assignments.ejs
+++ b/views/teacher/assignments/index-assignments.ejs
@@ -14,7 +14,7 @@
           <tr class="data-table-row" id="create-assignment-model">
             <td class="table-datacell datatype-string">
                 <label class="pure-material-textfield-outlined">
-                  <input placeholder=" " type="text" name="assignmentTopic" value="<%= assignments.assignmentTopic %>" required/>
+                  <input placeholder=" " type="text" name="assignmentTopic" required/>
                   <span>Enter Topic</span>
                  </label>
             </td>
