--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -1,6 +1,6 @@
 <div class="banner">ADMIN PANEL</div>
 <section class="admin-course-section" style="margin: 25px 0 0 15px;">
-  <%- include('./partials/card')  %> 
+  <%- include('./partials/courses')  %> 
 </section>
 <!-- <%- include('./modal-box/create-course') %>  -->
 
