--- a/views/register.ejs
+++ b/views/register.ejs
@@ -34,7 +34,7 @@
     <span>Course</span>
     </label>
     <label class="pure-material-textfield-outlined" id="hideValuesOnSelect" >
-         <input placeholder=" " type="name" id="subjectName" name="subjectName" required>
+         <input placeholder=" " type="name" id="subjectName" name="subjectName">
          <span>Subject Name</span>
     </label>
     <div class="form-button">
