--- a/public/css/input-type.css
+++ b/public/css/input-type.css
@@ -11,6 +11,7 @@
     border: none;
     background-color: transparent;
     font-family: inherit;
+    cursor: pointer;
 }
 .btn.btn-outline {
     border: 1px solid;
