--- a/public/css/style.css
+++ b/public/css/style.css
@@ -235,7 +235,6 @@ h1 {
     margin: 10px 10px 0 0;
 }
 
-
 /* Student & Teacher Page -------------------------------------------------------- */
 
 span.label-heading {
@@ -380,4 +379,33 @@ input.textfield-latest[type="date"]{
 .textfield-latest:focus {
     outline: none !important;
     border: 1px solid #2376ba;
+}
+/* Payment Form */
+
+.payment-form-container {
+    margin: 40px 0 0 40px;
+    width: 420px;
+    height: 450px;
+    padding: 0px 20px;
+    border: 1px solid lightgray;
+    background-color: #ededed;
+    border-radius: 15px;
+    
+}
+.payment-form-container input[type="text"],
+.payment-form-container input[type="number"],
+.payment-form-container input[type="password"] {
+     background: #ffffff;
+    padding: 10px 5px;
+    margin: 0px 0px 2px 0px;
+    border: 1px solid #888888;
+    width: 95%;
+}
+.payment-form-title {
+    margin: 10px 0px 3px 0px;
+    font-size: 17px;
+}
+.payment-form-action {
+    margin-top:30px;
+    text-align: center;
 }
