--- a/views/office/other-fees.ejs
+++ b/views/office/other-fees.ejs
@@ -4,7 +4,7 @@
           <path fill-rule="evenodd" d="M9.707 16.707a1 1 0 01-1.414 0l-6-6a1 1 0 010-1.414l6-6a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l4.293 4.293a1 1 0 010 1.414z" clip-rule="evenodd" />
       </svg>
     </a>
-    <span class="heading">Sem Fees : S6</span>
+    <span class="heading">Other Fees</span>
 </div>
 
 <div class="md-ui component-data-table">
@@ -19,7 +19,7 @@
         </thead>
         <tbody class="data-table-content">
         <% students.forEach(student => { %>
-          <form action="/office/fees/sem" method="POST">
+          <form action="/office/fees/others" method="POST">
           <tr class="data-table-row">
             <td class="table-datacell datatype-string"><%= student.name %></td>
             <td class="table-datacell datatype-numeric" style="text-align: center;">
@@ -27,7 +27,7 @@
               <%= student.course  %> 
             </td>
             <td class="table-datacell datatype-numeric">
-              <% if(student.semFeesPaid != "yes") { %> 
+              <% if(student.otherFeesPaid != "yes") { %> 
               <button class="btn btn-primary btn-action" type="submit">Notify</button>
               <% } else { %> 
                 <button class="btn  btn-action" type="button">Paid</button>
