--- a/views/office/partials/fees.ejs
+++ b/views/office/partials/fees.ejs
@@ -7,14 +7,8 @@
                 <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
             </svg>
         </li>
-        <li class="flex-box-coloured" onclick="window.location.href='office/fees/exam'">
-            <span class="flex-box-title">Exam Fees</span>
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 27 27" stroke="currentColor" stroke-width="3">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
-            </svg>
-        </li>
         <li class="flex-box-coloured" onclick="window.location.href='office/fees/others'">
-            <span class="flex-box-title">Others</span>
+            <span class="flex-box-title">Other Fees</span>
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 27 27" stroke="currentColor" stroke-width="3">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
             </svg>
