--- a/views/teacher/classes/index-classes.ejs
+++ b/views/teacher/classes/index-classes.ejs
@@ -32,8 +32,8 @@
             <button class="" type="submit">Save</button>
         </div>
       </form>
-    <button class="btn btn-outline btn-primary btn-action" type="button" 
-            style="margin: 25px 0 0 20px; height: 40px;" onclick="addClass()">
+    <button class="btn btn-outline btn-primary btn-action" type="button" id="create-class-btn"
+            style="margin: 10px 0 0 20px; height: 40px;" onclick="addClass()">
         Create
     </button>
 </ul>
