--- a/views/layout/partials/navbar.ejs
+++ b/views/layout/partials/navbar.ejs
@@ -9,7 +9,7 @@
 <div class="navbar">
     <a class="logo">Virtual Education System</a>
     <a class="nav-link btn btn-primary" href="/user/logout">Logout</a>
-    <a class="nav-link btn btn-primary" href="#"><%= user.name %></a>
+    <a class="nav-link btn btn-primary" href="/user/details/<%= user.id %> "><%= user.name %></a>
     <% if (typeof show_notification != 'undefined') { %>
         <a class="nav-link btn btn-primary" onclick="notificationPanel()" > Notification </a>
         <%- include('./notification-panel') %> 
